@@ -1,6 +1,10 @@
 Version 7.43.0.1 [requires libcurl-7.19.0 or better] - 2017-09-03
 -----------------------------------------------------------------
 
+        * WRITEHEADER/WRITEFUNCTION and WRITEDATA/WRITEFUNCTION can now
+          be set on the same handle. The last call will take precedence over
+          previous calls. Previously some combinations were not allowed.
+
         * Fixed a theoretical memory leak in module initialization (patch by
           ideal).
 
